logs/Slang/generic/typedef/typedef_test_22.sv.log
name: typedef_test_22
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_22.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_22.sv:7:14: error: use of undeclared identifier 'uvec8_t'
typedef enum uvec8_t {
             ^~~~~~~
